[package]
name = "youtube-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.6.19"
include_dir = "0.7.3"
anyhow = "1.0.72"

[build-dependencies]
winres = "0.1.12"
