[package]
name = "youtube-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.6.19"
include_dir = "0.7.3"
anyhow = "1.0.72"
ravif = "0.11.2"
rgb = "0.8.36"
image = "0.24.6"
libwebp-sys = "0.9.2"
actix-web = "4.3.1"
once_cell = "1.18.0"
qstring = "0.7.2"
regex = "1.9.3"
serde = { version = "1.0.181", features = ["derive"] }
toml = "0.7.6"
reqwest = { version = "0.11.18", features = [
    "rustls-tls",
    "stream",
    "brotli",
    "gzip",
], default-features = false }
aho-corasick = "1.0.2"
directories = "5.0.1"

[build-dependencies]
winres = "0.1.12"
walkdir = "2.3.3"
